feat: update translations

--- a/apps/web/public/static/locales/cs/common.json
+++ b/apps/web/public/static/locales/cs/common.json
@@ -846,6 +846,7 @@
   "disable_notes": "Skrýt poznámky v kalendáři",
   "disable_notes_description": "Z důvodu ochrany soukromí budou v záznamu kalendáře skryty další vstupy a poznámky. Stále budou odeslány na váš e-mail.",
   "requires_confirmation_description": "Rezervace musí být ručně potvrzena, než bude odeslána do integrovaných systémů a dojde k odeslání e-mailu s potvrzením.",
+  "requires_confirmation_will_block_slot_description": "Nepotvrzené rezervace stále blokují časové sloty v kalendáři.",
   "recurring_event": "Opakovaná událost",
   "recurring_event_description": "Lidé se mohou přihlásit k opakovaným událostem",
   "cannot_be_used_with_paid_event_types": "Nelze použít s placenými typy událostí",
@@ -957,6 +958,7 @@
   "signin_with_google": "Přihlásit se pomocí Googlu",
   "signin_with_saml": "Přihlásit se pomocí SAML",
   "signin_with_saml_oidc": "Přihlášení pomocí SAML/OIDC",
+  "last_used": "Naposledy použito",
   "you_will_need_to_generate": "Budete muset vygenerovat přístupový token ve vašem dřívějším plánovacím nástroji.",
   "import": "Importovat",
   "import_from": "Importovat z",
@@ -1958,6 +1960,7 @@
   "members_default_schedule_description": "Použijeme výchozí rozvrh dostupnosti každého člena. Bude ho moci upravovat nebo měnit.",
   "requires_at_least_one_schedule": "Musíte mít alespoň jeden rozvrh",
   "default_conferencing_bulk_description": "Aktualizujte místa pro vybrané typy událostí",
+  "default_schedules_bulk_description": "Aktualizujte plány pro vybrané typy událostí",
   "locked_for_members": "Zamčeno pro členy",
   "unlocked_for_members": "Odemčeno pro členy",
   "apps_locked_for_members_description": "Členové uvidí aktivní aplikace, ale nastavení aplikací upravovat nemohou",
@@ -2453,7 +2456,7 @@
   "create_account_password_hint": "Nemáte heslo k účtu, vytvořte ho navigací na Zabezpečení -> Heslo. Nelze se odpojit, dokud není vytvořeno heslo k účtu.",
   "disconnect_account": "Odpojit připojený účet",
   "disconnect_account_hint": "Odpojení připojeného účtu změní způsob, jakým se přihlašujete. Budete se moci přihlásit pouze pomocí e-mailu a hesla.",
-  "cookie_consent_checkbox": "Souhlasím s našimi zásadami ochrany osobních údajů a používáním cookies",
+  "cookie_consent_checkbox": "Vytvořením účtu souhlasíte s našimi zásadami ochrany osobních údajů a používáním cookies",
   "make_a_call": "Zavolat",
   "skip_rr_assignment_label": "Přeskočit round robin přiřazení, pokud kontakt existuje v Salesforce",
   "skip_rr_description": "URL musí obsahovat e-mail kontaktu jako parametr, např. ?email=contactEmail",
