--- a/apps/web/public/static/locales/de/common.json
+++ b/apps/web/public/static/locales/de/common.json
@@ -846,6 +846,7 @@
   "disable_notes": "Notizen im Kalender ausblenden",
   "disable_notes_description": "Aus Datenschutzgründen werden zusätzliche Eingaben und Notizen im Kalendereintrag ausgeblendet. Sie werden trotzdem an Ihre E-Mail gesendet.",
   "requires_confirmation_description": "Die Buchung muss manuell bestätigt werden, bevor die Buchungsinformationen an die Integrationen weitergeleitet werden und eine Bestätigungsmail gesendet wird.",
+  "requires_confirmation_will_block_slot_description": "Unbestätigte Buchungen blockieren trotzdem Kalenderslots.",
   "recurring_event": "Wiederkehrender Termin",
   "recurring_event_description": "Personen können sich für wiederkehrende Termine anmelden",
   "cannot_be_used_with_paid_event_types": "Es kann nicht mit bezahlten Ereignistypen verwendet werden",
@@ -957,6 +958,7 @@
   "signin_with_google": "Mit Google anmelden",
   "signin_with_saml": "Anmelden mit SAML",
   "signin_with_saml_oidc": "Anmelden mit SAML/OIDC",
+  "last_used": "Zuletzt verwendet",
   "you_will_need_to_generate": "Sie müssen ein Zugriffstoken in ihrem alten Kalender-Tool erzeugen.",
   "import": "Importieren",
   "import_from": "Importieren von",
@@ -1958,6 +1960,7 @@
   "members_default_schedule_description": "Wir werden den Standardverfügbarkeitsplan jedes Mitglieds verwenden. Sie können ihn bearbeiten oder ändern.",
   "requires_at_least_one_schedule": "Sie müssen mindestens einen Verfügbarkeitsplan haben",
   "default_conferencing_bulk_description": "Orte für die ausgewählten Termintypen aktualisieren",
+  "default_schedules_bulk_description": "Aktualisieren Sie die Zeitpläne für die ausgewählten Ereignistypen",
   "locked_for_members": "Für Mitglieder gesperrt",
   "unlocked_for_members": "Für Mitglieder freigeschaltet",
   "apps_locked_for_members_description": "Mitglieder können die aktiven Apps sehen, können aber keine App-Einstellungen anpassen",
@@ -2453,7 +2456,7 @@
   "create_account_password_hint": "Sie haben kein Konto-Passwort. Erstellen Sie eines, indem Sie zu Sicherheit -> Passwort navigieren. Die Verbindung kann nicht getrennt werden, bis ein Konto-Passwort erstellt wurde.",
   "disconnect_account": "Verbundenes Konto trennen",
   "disconnect_account_hint": "Das Trennen Ihres verbundenen Kontos ändert die Art und Weise, wie Sie sich anmelden. Sie können sich nur mit E-Mail + Passwort bei Ihrem Konto anmelden",
-  "cookie_consent_checkbox": "Durch die Erstellung eines Kontos stimmen Sie unserer Datenschutzerklärung und der Verwendung von Cookies zu",
+  "cookie_consent_checkbox": "Mit der Erstellung eines Kontos stimmen Sie unserer Datenschutzrichtlinie und der Verwendung von Cookies zu",
   "make_a_call": "Anruf tätigen",
   "skip_rr_assignment_label": "Round-Robin-Zuweisung überspringen, wenn der Kontakt in Salesforce existiert",
   "skip_rr_description": "URL muss die E-Mail des Kontakts als Parameter enthalten, z. B. ?email=contactEmail",
