--- a/apps/web/public/static/locales/fr/common.json
+++ b/apps/web/public/static/locales/fr/common.json
@@ -846,6 +846,7 @@
   "disable_notes": "Masquer les notes dans le calendrier",
   "disable_notes_description": "Pour des raisons de confidentialité, les champs et notes supplémentaires seront masquées dans l'entrée du calendrier. Elles vous seront tout de même envoyées par e-mail.",
   "requires_confirmation_description": "La réservation doit être confirmée manuellement avant d'être poussée vers les intégrations et qu'un e-mail de confirmation soit envoyé.",
+  "requires_confirmation_will_block_slot_description": "Les réservations non confirmées bloquent quand même les créneaux du calendrier.",
   "recurring_event": "Événement récurrent",
   "recurring_event_description": "Les personnes peuvent s'inscrire à des événements récurrents.",
   "cannot_be_used_with_paid_event_types": "À ne pas utiliser avec les types d'événement payants",
@@ -957,6 +958,7 @@
   "signin_with_google": "Se connecter avec Google",
   "signin_with_saml": "Se connecter avec SAML",
   "signin_with_saml_oidc": "Se connecter avec SAML/OIDC",
+  "last_used": "Dernière utilisation",
   "you_will_need_to_generate": "Vous devrez générer un token d'accès à partir de votre ancien outil de planification.",
   "import": "Importer",
   "import_from": "Importer depuis",
@@ -1958,6 +1960,7 @@
   "members_default_schedule_description": "Nous utiliserons le calendrier de disponibilité par défaut de chaque membre. Ils pourront le modifier ou le changer.",
   "requires_at_least_one_schedule": "Vous devez avoir au moins un planning",
   "default_conferencing_bulk_description": "Mettez à jour les emplacements pour les types d'événements sélectionnés.",
+  "default_schedules_bulk_description": "Mettre à jour les horaires pour les types d'événements sélectionnés",
   "locked_for_members": "Verrouillé pour les membres",
   "unlocked_for_members": "Déverrouillé pour les membres",
   "apps_locked_for_members_description": "Les membres pourront voir les applications actives, mais ne pourront pas modifier leurs paramètres.",
@@ -2453,7 +2456,7 @@
   "create_account_password_hint": "Vous n'avez pas de mot de passe pour votre compte. Créez-en un depuis Sécurité -> Mot de passe. Vous ne pouvez pas vous déconnecter tant que le mot de passe du compte n'a pas été créé.",
   "disconnect_account": "Déconnecter le compte connecté",
   "disconnect_account_hint": "La déconnexion de votre compte connecté modifiera votre façon de vous connecter. Vous ne pourrez plus vous connecter à votre compte qu'en utilisant votre adresse e-mail et votre mot de passe",
-  "cookie_consent_checkbox": "En créant un compte, vous acceptez notre politique de confidentialité et l'utilisation des cookies",
+  "cookie_consent_checkbox": "En créant un compte, vous acceptez notre politique de confidentialité et l'utilisation de cookies",
   "make_a_call": "Passer un appel",
   "skip_rr_assignment_label": "Ignorer l'affectation par permutation circulaire si le contact existe dans Salesforce",
   "skip_rr_description": "L'URL doit contenir l'adresse e-mail du contact en tant que paramètre. Ex. : ?email=contactEmail",
