--- a/apps/web/public/static/locales/he/common.json
+++ b/apps/web/public/static/locales/he/common.json
@@ -846,6 +846,7 @@
   "disable_notes": "הסתר הערות בלוח השנה",
   "disable_notes_description": "מסיבות פרטיות, אפשרויות קלט נוספות והערות יוסתרו מהרשומה בלוח השנה. הם עדיין יישלחו אליך בדוא\"ל.",
   "requires_confirmation_description": "יש לאשר את ההזמנה באופן ידני כדי שניתן יהיה להעביר אותה אל השילובים ולשלוח הודעת אישור בדוא״ל.",
+  "requires_confirmation_will_block_slot_description": "הזמנות לא מאושרות עדיין חוסמות את הזמן ביומן.",
   "recurring_event": "אירוע חוזר",
   "recurring_event_description": "אנשים יכולים להירשם לאירועים חוזרים",
   "cannot_be_used_with_paid_event_types": "אי אפשר להשתמש בזה עם סוגי פגישות בתשלום",
@@ -957,6 +958,7 @@
   "signin_with_google": "כניסה עם Google",
   "signin_with_saml": "כניסה עם SAML",
   "signin_with_saml_oidc": "כניסה עם SAML/OIDC",
+  "last_used": "שימוש אחרון",
   "you_will_need_to_generate": "תצטרך ליצור טוקן גישה מהכלי הישן שבו השתמשת לקביעת מועדים.",
   "import": "ייבוא",
   "import_from": "ייבוא מ",
@@ -1958,6 +1960,7 @@
   "members_default_schedule_description": "אנחנו נשתמש בלוח הזמנים והזמינות שמוגדר כברירת מחדל עבור כל חבר/ה. החברים יוכלו לערוך או לשנות את הנתונים.",
   "requires_at_least_one_schedule": "אתה חייב שיהיה לך לפחות לוח זמנים אחד",
   "default_conferencing_bulk_description": "עדכן את המיקומים עבור סוגי הארועים שנבחרו",
+  "default_schedules_bulk_description": "עדכן את לוחות הזמנים עבור סוגי האירועים שנבחרו",
   "locked_for_members": "נעול לחברים",
   "unlocked_for_members": "שוחרר לטובת החברים",
   "apps_locked_for_members_description": "החברים יוכלו לראות את האפליקציות הפעילות, אבל לא יוכלו לערוך את הגדרות האפליקציה",
@@ -2453,7 +2456,7 @@
   "create_account_password_hint": "אין סיסמה לחשבון שלך, אפשר ליצור סיסמה על ידי ניווט לאבטחה -> סיסמה. אי אפשר לנתק עד שסיסמת החשבון נוצרת.",
   "disconnect_account": "ניתוק חשבון מקושר",
   "disconnect_account_hint": "ניתוק החשבון המחובר שלך ישנה את אופן ההתחברות שלך. תוכל להתחבר לחשבונך רק באמצעות דוא\"ל + סיסמה.",
-  "cookie_consent_checkbox": "מדיניות הפרטיות והשימוש בעוגיות מוסכמים עליי",
+  "cookie_consent_checkbox": "על ידי יצירת חשבון, אתה מסכים למדיניות הפרטיות שלנו ולשימוש בעוגיות",
   "make_a_call": "בצע שיחה",
   "skip_rr_assignment_label": "דלג על הקצאת round robin אם איש הקשר קיים ב-Salesforce",
   "skip_rr_description": "ה-URL חייב להכיל את הדוא\"ל של איש הקשר כפרמטר לדוגמה: ?email=contactEmail",
