--- a/apps/web/public/static/locales/pl/common.json
+++ b/apps/web/public/static/locales/pl/common.json
@@ -846,6 +846,7 @@
   "disable_notes": "Ukryj notatki w kalendarzu",
   "disable_notes_description": "Ze względu na prywatność, dodatkowe dane wejściowe i notatki zostaną ukryte we wpisie kalendarza. Będą one nadal wysyłane na Twój adres e-mail.",
   "requires_confirmation_description": "Rezerwację trzeba potwierdzić ręcznie, aby można było skierować ją do integracji i wysłać wiadomość z potwierdzeniem.",
+  "requires_confirmation_will_block_slot_description": "Niepotwierdzone rezerwacje nadal blokują terminy w kalendarzu.",
   "recurring_event": "Wydarzenie cykliczne",
   "recurring_event_description": "Osoby mogą subskrybować wydarzenia cykliczne",
   "cannot_be_used_with_paid_event_types": "Nie można używać z płatnymi typami wydarzeń",
@@ -957,6 +958,7 @@
   "signin_with_google": "Zaloguj się przez Google",
   "signin_with_saml": "Zaloguj się za pomocą SAML",
   "signin_with_saml_oidc": "Zaloguj się za pomocą SAML/OIDC",
+  "last_used": "Ostatnio używane",
   "you_will_need_to_generate": "Będziesz musiał wygenerować token dostępu ze strony integracji.",
   "import": "Importuj",
   "import_from": "Importuj z",
@@ -1958,6 +1960,7 @@
   "members_default_schedule_description": "Będziemy używać domyślnego harmonogramu dostępności każdego członka. Każdy z nich będzie mógł go edytować lub zmienić.",
   "requires_at_least_one_schedule": "Musisz mieć co najmniej jeden harmonogram",
   "default_conferencing_bulk_description": "Aktualizuj lokalizacje wybranych typów wydarzeń",
+  "default_schedules_bulk_description": "Zaktualizuj harmonogramy dla wybranych typów wydarzeń",
   "locked_for_members": "Zablokowany dla członków",
   "unlocked_for_members": "Odblokowane dla członków",
   "apps_locked_for_members_description": "Członkowie będą mogli sprawdzić aktywne aplikacje, ale nie będą mogli edytować ich ustawień",
@@ -2453,7 +2456,7 @@
   "create_account_password_hint": "Nie masz hasła do konta, utwórz je, przechodząc do Bezpieczeństwo -> Hasło. Nie można się rozłączyć, dopóki nie zostanie utworzone hasło do konta.",
   "disconnect_account": "Odłącz połączone konto",
   "disconnect_account_hint": "Odłączenie połączonego konta zmieni sposób logowania. Będziesz mógł zalogować się na swoje konto tylko za pomocą e-maila i hasła.",
-  "cookie_consent_checkbox": "Wyrażam zgodę na naszą politykę prywatności i używanie plików cookie",
+  "cookie_consent_checkbox": "Tworząc konto, zgadzasz się na naszą politykę prywatności i używanie plików cookie",
   "make_a_call": "Wykonaj połączenie",
   "skip_rr_assignment_label": "Pomiń przydział round robin, jeśli kontakt istnieje w Salesforce",
   "skip_rr_description": "URL musi zawierać e-mail kontaktu jako parametr, np. ?email=contactEmail",
