--- a/apps/web/public/static/locales/zh-CN/common.json
+++ b/apps/web/public/static/locales/zh-CN/common.json
@@ -713,7 +713,6 @@
   "default_duration_no_options": "请先选择可用时长",
   "multiple_duration_mins": "{{count}} $t(minute_timeUnit)",
   "multiple_duration_timeUnit": "{{count}} $t({{unit}}_timeUnit)",
-  "multiple_duration_timeUnit_short": "{{count}} $t({{unit}}_short)",
   "multiple_duration_timeUnit_short": "{{count}}$t({{unit}}_short)",
   "minutes": "分钟",
   "use_cal_ai_to_make_call_description": "使用 Cal.ai 获得人工智能驱动的电话号码或拨打电话给访客。",
@@ -847,6 +846,7 @@
   "disable_notes": "在日历中隐藏备注",
   "disable_notes_description": "出于隐私原因，额外的输入和备注将在日历条目中被隐藏，但它们仍将发送到您的电子邮件中。",
   "requires_confirmation_description": "将预约推送至集成和发送确认邮件之前，需要先手动确认预约。",
+  "requires_confirmation_will_block_slot_description": "未确认的预订仍会占用日历时间段。",
   "recurring_event": "定期活动",
   "recurring_event_description": "人们可以订阅定期活动",
   "cannot_be_used_with_paid_event_types": "不能用于付费的活动类型",
@@ -958,6 +958,7 @@
   "signin_with_google": "使用Google登录",
   "signin_with_saml": "使用 SAML 登录",
   "signin_with_saml_oidc": "使用 SAML/OIDC 登录",
+  "last_used": "上次使用",
   "you_will_need_to_generate": "您需要从从您的旧工具上生成访问令牌",
   "import": "导入",
   "import_from": "导入自",
@@ -1286,11 +1287,9 @@
   "reminder_email": "提醒: 和 {{name}} 在 {{date}} 的 {{eventType}}",
   "not_triggering_existing_bookings": "不会针对已经存在的预约而触发，因为用户在预约活动时会被要求提供电话号码。",
   "minute_one": "{{count}} 分钟",
-  "minute_one_short": "{{count}} 分钟",
   "minute_one_short": "{{count}}分钟",
   "minute_other": "{{count}} 分钟",
   "hour_one": "{{count}} 小时",
-  "hour_one_short": "{{count}} 小时",
   "hour_one_short": "{{count}}小时",
   "hour_other": "{{count}} 小时",
   "invalid_input": "输入无效",
@@ -1961,6 +1960,7 @@
   "members_default_schedule_description": "我们将使用每位成员的默认可用日程安排。他们可对其进行编辑或更改。",
   "requires_at_least_one_schedule": "您需要至少有一个日程安排",
   "default_conferencing_bulk_description": "更新选定活动类型的位置",
+  "default_schedules_bulk_description": "更新所选事件类型的日程安排",
   "locked_for_members": "已为成员锁定",
   "unlocked_for_members": "对成员解锁",
   "apps_locked_for_members_description": "成员将能够查看活动的应用，但不能编辑任何应用设置",
@@ -2456,7 +2456,7 @@
   "create_account_password_hint": "您还没有账户密码，请通过导航到“安全 -> 密码”来创建一个。在创建账户密码之前，无法断开连接。",
   "disconnect_account": "断开已连接的账户",
   "disconnect_account_hint": "断开已连接的账户将改变您的登录方式。您只能使用邮箱和密码登录您的账户。",
-  "cookie_consent_checkbox": "我同意 Cal.com 的隐私政策以及 cookie 使用政策",
+  "cookie_consent_checkbox": "创建账户即表示您同意我们的隐私政策和Cookie使用",
   "make_a_call": "打电话",
   "skip_rr_assignment_label": "如果联系人存在于Salesforce中，则跳过round robin分配",
   "skip_rr_description": "URL必须包含联系人的电子邮件作为参数，例如 ?email=contactEmail",
