--- a/apps/web/public/static/locales/es-419/common.json
+++ b/apps/web/public/static/locales/es-419/common.json
@@ -846,6 +846,7 @@
   "disable_notes": "Ocultar notas en el calendario",
   "disable_notes_description": "Por razones de privacidad, las entradas adicionales y las notas se ocultarán en la entrada del calendario. Aún se enviarán a su correo electrónico.",
   "requires_confirmation_description": "La reserva necesita ser confirmada manualmente antes de que se envíe a las integraciones y se envíe un correo de confirmación.",
+  "requires_confirmation_will_block_slot_description": "Las reservas no confirmadas aún bloquean los espacios en el calendario.",
   "recurring_event": "Evento recurrente",
   "recurring_event_description": "Las personas pueden suscribirse a eventos recurrentes",
   "cannot_be_used_with_paid_event_types": "No se puede usar con tipos de eventos pagados",
@@ -957,6 +958,7 @@
   "signin_with_google": "Iniciar sesión con Google",
   "signin_with_saml": "Iniciar sesión con SAML",
   "signin_with_saml_oidc": "Iniciar sesión con SAML/OIDC",
+  "last_used": "Último uso",
   "you_will_need_to_generate": "Necesitarás generar un token de acceso desde tu antigua herramienta de programación.",
   "import": "Importar",
   "import_from": "Importar desde",
@@ -1958,6 +1960,7 @@
   "members_default_schedule_description": "Usaremos el horario de disponibilidad predeterminado de cada miembro. Ellos podrán editarlo o cambiarlo.",
   "requires_at_least_one_schedule": "Se requiere tener al menos un horario",
   "default_conferencing_bulk_description": "Actualizar las ubicaciones para los tipos de eventos seleccionados",
+  "default_schedules_bulk_description": "Actualiza los horarios para los tipos de eventos seleccionados",
   "locked_for_members": "Bloqueado para los miembros",
   "unlocked_for_members": "Desbloqueado para los miembros",
   "apps_locked_for_members_description": "Los miembros podrán ver las aplicaciones activas pero no podrán editar ninguna configuración de la aplicación",
@@ -2453,7 +2456,7 @@
   "create_account_password_hint": "No tienes una contraseña de cuenta, crea una navegando a Seguridad -> Contraseña. No puedes desconectarte hasta que se cree una contraseña de cuenta.",
   "disconnect_account": "Desconectar cuenta conectada",
   "disconnect_account_hint": "Desconectar tu cuenta conectada cambiará la forma en que inicias sesión. Solo podrás iniciar sesión en tu cuenta usando correo electrónico + contraseña",
-  "cookie_consent_checkbox": "Consiento nuestra política de privacidad y el uso de cookies",
+  "cookie_consent_checkbox": "Al crear una cuenta, aceptas nuestra política de privacidad y el uso de cookies",
   "make_a_call": "Hacer una llamada",
   "skip_rr_assignment_label": "Omitir asignación round robin si el contacto existe en Salesforce",
   "skip_rr_description": "La URL debe contener el correo electrónico del contacto como parámetro, ej. ?email=contactEmail",
