--- a/apps/web/public/static/locales/it/common.json
+++ b/apps/web/public/static/locales/it/common.json
@@ -846,6 +846,7 @@
   "disable_notes": "Nascondi le note nel calendario",
   "disable_notes_description": "Per motivi di privacy, gli input e le note aggiuntivi saranno nascosti nella voce del calendario. Verranno comunque inviati alla tua email.",
   "requires_confirmation_description": "La prenotazione deve essere confermata manualmente prima di essere inviata alle integrazioni e che venga inviata una e-mail di conferma.",
+  "requires_confirmation_will_block_slot_description": "Le prenotazioni non confermate bloccano comunque gli slot del calendario.",
   "recurring_event": "Evento ricorrente",
   "recurring_event_description": "Le persone possono iscriversi a eventi ricorrenti",
   "cannot_be_used_with_paid_event_types": "Non può essere utilizzato con i tipi di evento a pagamento",
@@ -957,6 +958,7 @@
   "signin_with_google": "Accedi con Google",
   "signin_with_saml": "Accedi con SAML",
   "signin_with_saml_oidc": "Accedi con SAML/OIDC",
+  "last_used": "Ultimo utilizzo",
   "you_will_need_to_generate": "Dovrai generare un token di accesso con il tuo vecchio strumento di pianificazione.",
   "import": "Importa",
   "import_from": "Importa da",
@@ -1958,6 +1960,7 @@
   "members_default_schedule_description": "Useremo il programma di disponibilità predefinito di ciascun membro. I membri potranno modificarlo.",
   "requires_at_least_one_schedule": "È necessario avere almeno un programma",
   "default_conferencing_bulk_description": "Aggiorna le posizioni per i tipi di eventi selezionati",
+  "default_schedules_bulk_description": "Aggiorna i programmi per i tipi di eventi selezionati",
   "locked_for_members": "Bloccato per i membri",
   "unlocked_for_members": "Sbloccato per i membri",
   "apps_locked_for_members_description": "I membri potranno vedere le app attive, ma non potranno modificare le impostazioni delle app",
