--- a/apps/web/public/static/locales/pt-BR/common.json
+++ b/apps/web/public/static/locales/pt-BR/common.json
@@ -846,6 +846,7 @@
   "disable_notes": "Ocultar notas no calendário",
   "disable_notes_description": "Por motivo de privacidade, notas e dados adicionais serão ocultos na entrada do calendário. Serão enviadas por e-mail.",
   "requires_confirmation_description": "A reserva precisa ser confirmada manualmente antes de ser enviada para as integrações e ser enviado um e-mail de confirmação.",
+  "requires_confirmation_will_block_slot_description": "Reservas não confirmadas ainda bloqueiam os horários no calendário.",
   "recurring_event": "Evento recorrente",
   "recurring_event_description": "As pessoas podem se inscrever em eventos recorrentes",
   "cannot_be_used_with_paid_event_types": "Não pode ser usado com eventos pagos",
@@ -957,6 +958,7 @@
   "signin_with_google": "Entrar com Google",
   "signin_with_saml": "Entrar com SAML",
   "signin_with_saml_oidc": "Entrar com SAML/OIDC",
+  "last_used": "Último uso",
   "you_will_need_to_generate": "Você precisa gerar um token de acesso na ferramenta de agendamento antiga.",
   "import": "Importar",
   "import_from": "Importar de",
@@ -1958,6 +1960,7 @@
   "members_default_schedule_description": "Usaremos a agenda de disponibilidade padrão de cada membro. Não será possível editar ou alterar.",
   "requires_at_least_one_schedule": "Você precisa ter pelo menos uma agenda",
   "default_conferencing_bulk_description": "Atualize as localizações para os tipos de evento selecionados",
+  "default_schedules_bulk_description": "Atualize os horários para os tipos de eventos selecionados",
   "locked_for_members": "Bloqueado para membros",
   "unlocked_for_members": "Desbloqueado para membros",
   "apps_locked_for_members_description": "Os membros poderão ver os aplicativos ativos, mas não poderão editar as configurações",
@@ -2453,7 +2456,7 @@
   "create_account_password_hint": "Você não tem uma senha de conta, crie uma em Securança -> Senha. Não é possível disconectar até uma senha de conta ser criada.",
   "disconnect_account": "Disconecte contas conectadas",
   "disconnect_account_hint": "Disconectar sua conta conectada mudará a maneira como você faz login. Você só poderá fazer login usando e-mail + senha",
-  "cookie_consent_checkbox": "Ao criar uma conta, você concorda com nossa política de privacidade e o uso de cookies",
+  "cookie_consent_checkbox": "Ao criar uma conta, você concorda com nossa política de privacidade e uso de cookies",
   "make_a_call": "Fazer uma Ligação",
   "skip_rr_assignment_label": "Pular atribuição round robin se o contato existir no Salesforce",
   "skip_rr_description": "A URL deve conter o e-mail do contato como um parâmetro, ex. ?email=contactEmail",
