--- a/apps/web/public/static/locales/pt/common.json
+++ b/apps/web/public/static/locales/pt/common.json
@@ -846,6 +846,7 @@
   "disable_notes": "Esconder notas no calendário",
   "disable_notes_description": "Por razões de privacidade, informações adicionais e notas serão escondidas no registo do calendário. Serão enviadas para o seu email.",
   "requires_confirmation_description": "A reserva precisa ser confirmada manualmente antes de ser enviada para as integrações e ser enviada uma mensagem de confirmação.",
+  "requires_confirmation_will_block_slot_description": "As reservas não confirmadas ainda bloqueiam os horários no calendário.",
   "recurring_event": "Evento recorrente",
   "recurring_event_description": "As pessoas podem subscrever para eventos recorrentes",
   "cannot_be_used_with_paid_event_types": "Não pode ser utilizado com tipos de eventos pagos",
@@ -957,6 +958,7 @@
   "signin_with_google": "Iniciar sessão com o Google",
   "signin_with_saml": "Iniciar sessão com SAML",
   "signin_with_saml_oidc": "Iniciar sessão com SAML/OIDC",
+  "last_used": "Última utilização",
   "you_will_need_to_generate": "Precisará de gerar um token de acesso na página das integrações.",
   "import": "Importar",
   "import_from": "Importar de",
@@ -1958,6 +1960,7 @@
   "members_default_schedule_description": "Vamos utilizar a agenda de disponibilidades predefinida de cada membro. Eles poderão editar ou alterar a mesma.",
   "requires_at_least_one_schedule": "É necessário que tenha pelo menos uma agenda",
   "default_conferencing_bulk_description": "Atualizar os locais para os tipos de evento selecionados",
+  "default_schedules_bulk_description": "Atualizar os horários para os tipos de eventos selecionados",
   "locked_for_members": "Bloqueado para os membros",
   "unlocked_for_members": "Desbloqueado para os membros",
   "apps_locked_for_members_description": "Os membros poderão ver as aplicações ativas, mas não poderão editar quaisquer configurações das aplicações",
@@ -2453,7 +2456,7 @@
   "create_account_password_hint": "Você não tem uma palavra-passe de conta. Crie uma acedendo a Segurança -> Senha. Não pode desassociar até que seja criada uma palavra-passe de conta.",
   "disconnect_account": "Desligar conta associada",
   "disconnect_account_hint": "Desligar a sua conta associada irá alterar a forma como inicia sessão. Só poderá iniciar sessão na sua conta utilizando o e-mail + a palavra-passe",
-  "cookie_consent_checkbox": "Ao criar uma conta, você concorda com a nossa política de privacidade e o uso de cookies",
+  "cookie_consent_checkbox": "Ao criar uma conta, concorda com a nossa política de privacidade e uso de cookies",
   "make_a_call": "Fazer uma chamada",
   "skip_rr_assignment_label": "Saltar a atribuição em distribuição equilibrada se o contacto existir no Salesforce",
   "skip_rr_description": "A URL deve conter o e-mail do contacto como um parâmetro, ex. ?email=contactEmail",
