--- a/apps/web/public/static/locales/ru/common.json
+++ b/apps/web/public/static/locales/ru/common.json
@@ -846,6 +846,7 @@
   "disable_notes": "Скрыть заметки в календаре",
   "disable_notes_description": "В целях обеспечения конфиденциальности дополнительные поля и заметки будут скрыты в записи календаря. При этом они будут отправлены на ваш адрес электронной почты.",
   "requires_confirmation_description": "Необходимо подвердить бронирование вручную, прежде чем оно будет передано интеграциям и будет отправлено письмо с подтверждением.",
+  "requires_confirmation_will_block_slot_description": "Неподтвержденные бронирования все равно блокируют слоты в календаре.",
   "recurring_event": "Повторяющееся событие",
   "recurring_event_description": "Пользователи могут подписываться на повторяющиеся события",
   "cannot_be_used_with_paid_event_types": "Это не может быть использовано с платными типами событий",
@@ -957,6 +958,7 @@
   "signin_with_google": "Войти через Google",
   "signin_with_saml": "Войти с помощью SAML",
   "signin_with_saml_oidc": "Войти с помощью SAML/OIDC",
+  "last_used": "Последнее использование",
   "you_will_need_to_generate": "Вам нужно сгенерировать токен доступа на странице интеграции.",
   "import": "Импорт",
   "import_from": "Импортировать из",
@@ -1958,6 +1960,7 @@
   "members_default_schedule_description": "Для каждого участника будет использоваться его график доступности по умолчанию. Участники смогут редактировать или менять его.",
   "requires_at_least_one_schedule": "У вас должно быть по крайней мере одно расписание",
   "default_conferencing_bulk_description": "Обновить местоположение для выбранных типов событий",
+  "default_schedules_bulk_description": "Обновите расписания для выбранных типов событий",
   "locked_for_members": "Заблокировано для участников",
   "unlocked_for_members": "Разблокировано для участников",
   "apps_locked_for_members_description": "Участники смогут видеть активные приложения, но не смогут редактировать их настройки",
@@ -2453,7 +2456,7 @@
   "create_account_password_hint": "У вас нет пароля для аккаунта, создайте его, перейдя в Безопасность -> Пароль. Невозможно отключиться, пока не создан пароль для аккаунта.",
   "disconnect_account": "Отключить подключенный аккаунт",
   "disconnect_account_hint": "Отключение подключенного аккаунта изменит способ входа. Вы сможете войти в свой аккаунт только с помощью электронной почты и пароля",
-  "cookie_consent_checkbox": "Я согласен с нашей политикой конфиденциальности и использованием файлов cookie",
+  "cookie_consent_checkbox": "Создавая учетную запись, вы соглашаетесь с нашей политикой конфиденциальности и использованием файлов cookie",
   "make_a_call": "Совершить звонок",
   "skip_rr_assignment_label": "Пропустить round robin назначение, если контакт существует в Salesforce",
   "skip_rr_description": "URL должен содержать электронную почту контакта в качестве параметра, например, ?email=contactEmail",
