feat: update translations

--- a/apps/web/public/static/locales/az/common.json
+++ b/apps/web/public/static/locales/az/common.json
@@ -2348,7 +2348,13 @@
   "success_entry_created": "Yeni giriş uğurla yaradıldı",
   "booking_redirect_email_subject": "Yönləndirmə bildirişi",
   "booking_redirect_email_title": "Yönləndirmə Bildirişi",
-  "booking_redirect_email_description": "{{toName}} tərəfindən sizə yönləndirmə göndərildi, buna görə onların profil linkləri sizin linklərinizə yönləndiriləcək: ",
+  "booking_redirect_email_description": "{{eventOwner}} tərəfindən yönləndirmə aldınız, beləliklə onların profil bağlantıları \"{{dates}}\" intervalı üçün sizə yönləndiriləcək",
+  "booking_redirect_updated_email_subject": "Yönləndirmə redaktəsi bildirişi",
+  "booking_redirect_updated_email_title": "Yönləndirmə Redaktəsi Bildirişi",
+  "booking_redirect_updated_email_description": "{{eventOwner}} tərəfindən \"{{oldDates}}\" intervalı üçün yönləndirməniz yenilənib. Yeni yönləndirmə intervalı: \"{{dates}}\"",
+  "booking_redirect_cancelled_email_subject": "Yönləndirmə ləğv bildirişi",
+  "booking_redirect_cancelled_email_title": "Yönləndirmə Ləğv Bildirişi",
+  "booking_redirect_cancelled_email_description": "{{eventOwner}} tərəfindən \"{{dates}}\" intervalı üçün yönləndirməniz ləğv edilib.",
   "success_accept_booking_redirect": "Yönləndirmə sorğusunu qəbul etdiniz.",
   "success_reject_booking_redirect": "Yönləndirmə sorğusunu rədd etdiniz.",
   "copy_link_booking_redirect_request": "Sorğunu paylaşmaq üçün linki kopyalayın",
@@ -2359,6 +2365,7 @@
   "redirect_team_disabled": "OOO zamanı komanda üzvünə link verin (Komanda planı tələb olunur)",
   "out_of_office_unavailable_list": "Ofisdən kənar əlçatmazlıq siyahısı",
   "success_deleted_entry_out_of_office": "Giriş uğurla silindi",
+  "success_edited_entry_out_of_office": "Giriş uğurla redaktə edildi",
   "temporarily_out_of_office": "Müvəqqəti olaraq ofisdən kənardasınız?",
   "add_a_redirect": "Yönləndirmə əlavə edin",
   "create_entry": "Giriş yaradın",
@@ -2482,6 +2489,7 @@
   "ooo_create_entry_modal": "Ofisdən kənar olun",
   "ooo_select_reason": "Səbəbi seçin",
   "create_an_out_of_office": "Ofisdən kənar olun",
+  "edit_an_out_of_office": "Ofisdən Kənar Girişi Redaktə Et",
   "submit_feedback": "Rəy bildirin",
   "host_no_show": "Sizin ev sahibiniz gəlmədi",
   "no_show_description": "Onlarla başqa bir görüş təyin edə bilərsiniz",
