--- a/apps/web/public/static/locales/cs/common.json
+++ b/apps/web/public/static/locales/cs/common.json
@@ -2348,7 +2348,13 @@
   "success_entry_created": "Nový záznam byl úspěšně vytvořen",
   "booking_redirect_email_subject": "Oznámení o přesměrování rezervace",
   "booking_redirect_email_title": "Oznámení o přesměrování rezervace",
-  "booking_redirect_email_description": "Obdrželi jste přesměrování rezervace od {{toName}}, takže jejich profilové odkazy budou přesměrovány na vaše po dobu časového intervalu: ",
+  "booking_redirect_email_description": "Obdrželi jste přesměrování rezervace od {{eventOwner}}, takže jejich profilové odkazy budou přesměrovány na váš pro časový interval: \"{{dates}}\"",
+  "booking_redirect_updated_email_subject": "Oznámení o úpravě přesměrování rezervace",
+  "booking_redirect_updated_email_title": "Oznámení o úpravě přesměrování rezervace",
+  "booking_redirect_updated_email_description": "Vaše přesměrování rezervace od {{eventOwner}} pro interval \"{{oldDates}}\" bylo aktualizováno. Nový časový interval pro přesměrování je: \"{{dates}}\"",
+  "booking_redirect_cancelled_email_subject": "Oznámení o zrušení přesměrování rezervace",
+  "booking_redirect_cancelled_email_title": "Oznámení o zrušení přesměrování rezervace",
+  "booking_redirect_cancelled_email_description": "Vaše přesměrování rezervace od {{eventOwner}} pro časový interval \"{{dates}}\" bylo zrušeno.",
   "success_accept_booking_redirect": "Přijali jste tuto žádost o přesměrování rezervace.",
   "success_reject_booking_redirect": "Odmítli jste tuto žádost o přesměrování rezervace.",
   "copy_link_booking_redirect_request": "Zkopírovat odkaz pro sdílení žádosti",
@@ -2359,6 +2365,7 @@
   "redirect_team_disabled": "Poskytněte odkaz na člena týmu, když jste mimo kancelář (vyžaduje týmový plán)",
   "out_of_office_unavailable_list": "Seznam nedostupnosti mimo kancelář",
   "success_deleted_entry_out_of_office": "Položka byla úspěšně smazána",
+  "success_edited_entry_out_of_office": "Úspěšně upravený záznam",
   "temporarily_out_of_office": "Dočasně mimo kancelář?",
   "add_a_redirect": "Přidat přesměrování",
   "create_entry": "Vytvořit položku",
@@ -2482,6 +2489,7 @@
   "ooo_create_entry_modal": "Jít mimo kancelář",
   "ooo_select_reason": "Vyberte důvod",
   "create_an_out_of_office": "Jít mimo kancelář",
+  "edit_an_out_of_office": "Upravit záznam o nepřítomnosti",
   "submit_feedback": "Odeslat zpětnou vazbu",
   "host_no_show": "Váš hostitel se nedostavil",
   "no_show_description": "Můžete si s nimi naplánovat další schůzku",
