--- a/apps/web/public/static/locales/de/common.json
+++ b/apps/web/public/static/locales/de/common.json
@@ -2348,7 +2348,13 @@
   "success_entry_created": "Neuer Eintrag wurde erfolgreich erstellt",
   "booking_redirect_email_subject": "Buchungsumleitungsbenachrichtigung",
   "booking_redirect_email_title": "Buchungsumleitungsbenachrichtigung",
-  "booking_redirect_email_description": "Sie haben eine Umleitung der Buchung von {{toName}} erhalten, so dass deren Profillinks für das Zeitfenster an Sie umgeleitet werden: ",
+  "booking_redirect_email_description": "Sie haben eine Buchungsumleitung von {{eventOwner}} erhalten. Deren Profillinks werden für den Zeitraum: \"{{dates}}\" auf Ihr Profil umgeleitet.",
+  "booking_redirect_updated_email_subject": "Benachrichtigung über Änderung der Buchungsumleitung",
+  "booking_redirect_updated_email_title": "Benachrichtigung über Änderung der Buchungsumleitung",
+  "booking_redirect_updated_email_description": "Ihre Buchungsumleitung von {{eventOwner}} für den Zeitraum \"{{oldDates}}\" wurde aktualisiert. Der neue Zeitraum für die Umleitung ist: \"{{dates}}\"",
+  "booking_redirect_cancelled_email_subject": "Benachrichtigung über Stornierung der Buchungsumleitung",
+  "booking_redirect_cancelled_email_title": "Benachrichtigung über Stornierung der Buchungsumleitung",
+  "booking_redirect_cancelled_email_description": "Ihre Buchungsumleitung von {{eventOwner}} für den Zeitraum \"{{dates}}\" wurde storniert.",
   "success_accept_booking_redirect": "Sie haben diese Buchungsumleitungsanfrage akzeptiert.",
   "success_reject_booking_redirect": "Sie haben diese Buchungsumleitungsanfrage abgelehnt.",
   "copy_link_booking_redirect_request": "Link zum Teilen der Anfrage kopieren",
@@ -2359,6 +2365,7 @@
   "redirect_team_disabled": "Leiten Sie Ihr Profil an ein anderes Teammitglied um (Teamplan erforderlich)",
   "out_of_office_unavailable_list": "Abwesenheits-Unverfügbarkeitsliste",
   "success_deleted_entry_out_of_office": "Eintrag erfolgreich gelöscht",
+  "success_edited_entry_out_of_office": "Abwesenheitseintrag erfolgreich bearbeitet",
   "temporarily_out_of_office": "Temporär abwesend?",
   "add_a_redirect": "Umleitung hinzufügen",
   "create_entry": "Eintrag erstellen",
@@ -2482,6 +2489,7 @@
   "ooo_create_entry_modal": "Abwesenheit eintragen",
   "ooo_select_reason": "Grund auswählen",
   "create_an_out_of_office": "Abwesenheit eintragen",
+  "edit_an_out_of_office": "Abwesenheitseintrag bearbeiten",
   "submit_feedback": "Feedback absenden",
   "host_no_show": "Ihr Gastgeber ist nicht erschienen",
   "no_show_description": "Sie können ein anderes Meeting mit ihm bzw. ihr planen",
