--- a/apps/web/public/static/locales/fr/common.json
+++ b/apps/web/public/static/locales/fr/common.json
@@ -2348,7 +2348,13 @@
   "success_entry_created": "Création d'une nouvelle entrée réussie",
   "booking_redirect_email_subject": "Notification de redirection de réservation",
   "booking_redirect_email_title": "Notification de redirection de réservation",
-  "booking_redirect_email_description": "Vous avez reçu une redirection de réservation de {{toName}} pour que les liens vers son profil soient redirigés vers vous pendant l'intervalle de temps : ",
+  "booking_redirect_email_description": "Vous avez reçu une redirection de réservation de {{eventOwner}}. Leurs liens de profil seront redirigés vers les vôtres pour l'intervalle de temps : \"{{dates}}\"",
+  "booking_redirect_updated_email_subject": "Notification de modification de redirection de réservation",
+  "booking_redirect_updated_email_title": "Notification de modification de redirection de réservation",
+  "booking_redirect_updated_email_description": "Votre redirection de réservation de {{eventOwner}} pour l'intervalle \"{{oldDates}}\" a été mise à jour. Le nouvel intervalle de temps pour la redirection est : \"{{dates}}\"",
+  "booking_redirect_cancelled_email_subject": "Notification d'annulation de redirection de réservation",
+  "booking_redirect_cancelled_email_title": "Notification d'annulation de redirection de réservation",
+  "booking_redirect_cancelled_email_description": "Votre redirection de réservation de {{eventOwner}}, pour l'intervalle de temps \"{{dates}}\" a été annulée.",
   "success_accept_booking_redirect": "Vous avez accepté cette demande de redirection de réservation.",
   "success_reject_booking_redirect": "Vous avez refusé cette demande de redirection de réservation.",
   "copy_link_booking_redirect_request": "Copier le lien pour partager la demande",
@@ -2359,6 +2365,7 @@
   "redirect_team_disabled": "Redirigez votre profil vers un autre membre de l'équipe (formule Équipe requise)",
   "out_of_office_unavailable_list": "Liste des indisponibilités absent du bureau",
   "success_deleted_entry_out_of_office": "Suppression de l'entrée réussie",
+  "success_edited_entry_out_of_office": "Entrée modifiée avec succès",
   "temporarily_out_of_office": "Temporairement absent du bureau?",
   "add_a_redirect": "Ajouter une redirection",
   "create_entry": "Créer une entrée",
@@ -2482,6 +2489,7 @@
   "ooo_create_entry_modal": "Passer en absence",
   "ooo_select_reason": "Sélectionnez une raison",
   "create_an_out_of_office": "Passer en absence",
+  "edit_an_out_of_office": "Modifier une entrée d'absence",
   "submit_feedback": "Envoyer un commentaire",
   "host_no_show": "Votre hôte ne s'est pas présenté",
   "no_show_description": "Vous pouvez reprogrammer un autre rendez-vous avec lui ou elle",
