--- a/apps/web/public/static/locales/he/common.json
+++ b/apps/web/public/static/locales/he/common.json
@@ -2348,7 +2348,13 @@
   "success_entry_created": "רשומה חדשה נוצרה בהצלחה",
   "booking_redirect_email_subject": "התראת הפניית הזמנה",
   "booking_redirect_email_title": "התראת הפניית הזמנה",
-  "booking_redirect_email_description": "קיבלת הפניית הזמנות מאת {{toName}} כך שקישורי הפרופילים שלהם יפנו לשלך למשך: ",
+  "booking_redirect_email_description": "קיבלת הפניה מחדש של הזמנה מ{{eventOwner}} כך שקישורי הפרופיל שלהם יופנו אליך עבור התקופה: \"{{dates}}\"",
+  "booking_redirect_updated_email_subject": "הודעה על עריכת הפניה מחדש של הזמנה",
+  "booking_redirect_updated_email_title": "הודעה על עריכת הפניה מחדש של הזמנה",
+  "booking_redirect_updated_email_description": "הפניית ההזמנה שלך מ{{eventOwner}} עבור התקופה \"{{oldDates}}\" עודכנה. התקופה החדשה להפניה היא: \"{{dates}}\"",
+  "booking_redirect_cancelled_email_subject": "הודעה על ביטול הפניה מחדש של הזמנה",
+  "booking_redirect_cancelled_email_title": "הודעה על ביטול הפניה מחדש של הזמנה",
+  "booking_redirect_cancelled_email_description": "הפניית ההזמנה שלך מ{{eventOwner}}, עבור התקופה \"{{dates}}\" בוטלה.",
   "success_accept_booking_redirect": "קיבלת את בקשת הפניית ההזמנות הזאת.",
   "success_reject_booking_redirect": "דחית את בקשת הפניית ההזמנות הזאת.",
   "copy_link_booking_redirect_request": "העתקת קישור לבקשת שיתוף",
@@ -2359,6 +2365,7 @@
   "redirect_team_disabled": "הפניית הפרופיל שלך לחברים אחרים בצוות (למנויי תוכנית צוותית)",
   "out_of_office_unavailable_list": "רשימת אי־זמינות למחוץ למשרד",
   "success_deleted_entry_out_of_office": "רשומה נמחקה בהצלחה",
+  "success_edited_entry_out_of_office": "הערך נערך בהצלחה",
   "temporarily_out_of_office": "יצאת למשרד באופן זמני?",
   "add_a_redirect": "הוספת הפנייה",
   "create_entry": "יצירת רשומה",
@@ -2482,6 +2489,7 @@
   "ooo_create_entry_modal": "יציאה מהמשרד",
   "ooo_select_reason": "בחירת סיבה",
   "create_an_out_of_office": "יציאה מהמשרד",
+  "edit_an_out_of_office": "ערוך ערך מחוץ למשרד",
   "submit_feedback": "הגשת משוב",
   "host_no_show": "המארח/ת שלך לא הופיע/ה",
   "no_show_description": "אפשר לתזמן מולם פגישה נוספת מחדש",
