--- a/apps/web/public/static/locales/nl/common.json
+++ b/apps/web/public/static/locales/nl/common.json
@@ -2348,7 +2348,13 @@
   "success_entry_created": "Nieuwe vermelding succesvol aangemaakt",
   "booking_redirect_email_subject": "Boekingsomleidingsmelding",
   "booking_redirect_email_title": "Boekingsomleidingsmelding",
-  "booking_redirect_email_description": "Je hebt een boekingsomleiding ontvangen van {{toName}}, zodat hun profielkoppelingen naar de jouwe worden omgeleid voor het tijdsinterval: ",
+  "booking_redirect_email_description": "U heeft een boekingsomleiding ontvangen van {{eventOwner}} zodat hun profielkoppelingen naar de uwe worden omgeleid voor de tijdsperiode: \"{{dates}}\"",
+  "booking_redirect_updated_email_subject": "Melding van wijziging in boekingsomleiding",
+  "booking_redirect_updated_email_title": "Melding van Wijziging in Boekingsomleiding",
+  "booking_redirect_updated_email_description": "Uw boekingsomleiding van {{eventOwner}} voor de periode \"{{oldDates}}\" is bijgewerkt. De nieuwe tijdsperiode voor de omleiding is: \"{{dates}}\"",
+  "booking_redirect_cancelled_email_subject": "Melding van annulering van boekingsomleiding",
+  "booking_redirect_cancelled_email_title": "Melding van Annulering van Boekingsomleiding",
+  "booking_redirect_cancelled_email_description": "Uw boekingsomleiding van {{eventOwner}} voor de tijdsperiode \"{{dates}}\" is geannuleerd.",
   "success_accept_booking_redirect": "Je hebt dit boekingsomleidingsverzoek geaccepteerd.",
   "success_reject_booking_redirect": "Je hebt dit boekingsomleidingsverzoek afgewezen.",
   "copy_link_booking_redirect_request": "Kopieer link om verzoek te delen",
@@ -2359,6 +2365,7 @@
   "redirect_team_disabled": "Geef een link naar een teamlid wanneer u afwezig bent (Teamplan vereist)",
   "out_of_office_unavailable_list": "Lijst van onbeschikbaarheid buiten kantoor",
   "success_deleted_entry_out_of_office": "Invoer succesvol verwijderd",
+  "success_edited_entry_out_of_office": "Inschrijving succesvol bewerkt",
   "temporarily_out_of_office": "Tijdelijk afwezig?",
   "add_a_redirect": "Voeg een omleiding toe",
   "create_entry": "Invoer maken",
@@ -2482,6 +2489,7 @@
   "ooo_create_entry_modal": "Ga Out of Office",
   "ooo_select_reason": "Selecteer reden",
   "create_an_out_of_office": "Ga Out of Office",
+  "edit_an_out_of_office": "Bewerk Afwezigheidsmelding",
   "submit_feedback": "Feedback indienen",
   "host_no_show": "Je gastheer is niet komen opdagen",
   "no_show_description": "Je kunt een andere vergadering met hen plannen",
