--- a/apps/web/public/static/locales/pl/common.json
+++ b/apps/web/public/static/locales/pl/common.json
@@ -2348,7 +2348,13 @@
   "success_entry_created": "Pomyślnie utworzono nowy wpis",
   "booking_redirect_email_subject": "Powiadomienie o przekierowaniu rezerwacji",
   "booking_redirect_email_title": "Powiadomienie o przekierowaniu rezerwacji",
-  "booking_redirect_email_description": "Otrzymałeś przekierowanie rezerwacji od {{toName}}, więc ich linki profilowe będą przekierowywane do Twoich w przedziale czasowym: ",
+  "booking_redirect_email_description": "Otrzymałeś przekierowanie rezerwacji od {{eventOwner}}, więc ich linki profilowe będą przekierowywać do Twojego profilu w okresie: \"{{dates}}\"",
+  "booking_redirect_updated_email_subject": "Powiadomienie o edycji przekierowania rezerwacji",
+  "booking_redirect_updated_email_title": "Powiadomienie o edycji przekierowania rezerwacji",
+  "booking_redirect_updated_email_description": "Twoje przekierowanie rezerwacji od {{eventOwner}} na okres \"{{oldDates}}\" zostało zaktualizowane. Nowy przedział czasowy dla przekierowania to: \"{{dates}}\"",
+  "booking_redirect_cancelled_email_subject": "Powiadomienie o anulowaniu przekierowania rezerwacji",
+  "booking_redirect_cancelled_email_title": "Powiadomienie o anulowaniu przekierowania rezerwacji",
+  "booking_redirect_cancelled_email_description": "Twoje przekierowanie rezerwacji od {{eventOwner}} na okres \"{{dates}}\" zostało anulowane.",
   "success_accept_booking_redirect": "Zaakceptowałeś tę prośbę o przekierowanie rezerwacji.",
   "success_reject_booking_redirect": "Odrzuciłeś tę prośbę o przekierowanie rezerwacji.",
   "copy_link_booking_redirect_request": "Skopiuj link, aby udostępnić prośbę",
@@ -2359,6 +2365,7 @@
   "redirect_team_disabled": "Podaj link do członka zespołu, gdy jesteś poza biurem (wymagany plan zespołowy)",
   "out_of_office_unavailable_list": "Lista niedostępności poza biurem",
   "success_deleted_entry_out_of_office": "Pomyślnie usunięto wpis",
+  "success_edited_entry_out_of_office": "Pomyślnie edytowano wpis",
   "temporarily_out_of_office": "Tymczasowo poza biurem?",
   "add_a_redirect": "Dodaj przekierowanie",
   "create_entry": "Utwórz wpis",
@@ -2482,6 +2489,7 @@
   "ooo_create_entry_modal": "Wyjdź z biura",
   "ooo_select_reason": "Wybierz powód",
   "create_an_out_of_office": "Wyjdź z biura",
+  "edit_an_out_of_office": "Edytuj wpis o nieobecności",
   "submit_feedback": "Prześlij opinię",
   "host_no_show": "Twój gospodarz się nie pojawił",
   "no_show_description": "Możesz przełożyć spotkanie na inny termin",
