--- a/apps/web/public/static/locales/pt/common.json
+++ b/apps/web/public/static/locales/pt/common.json
@@ -2348,7 +2348,13 @@
   "success_entry_created": "Criou uma nova entrada com sucesso",
   "booking_redirect_email_subject": "Notificação de redirecionamento de reserva",
   "booking_redirect_email_title": "Notificação de redirecionamento de reserva",
-  "booking_redirect_email_description": "Recebeu um redirecionamento de reservas de {{toName}}, pelo que as ligações do respetivo perfil serão redirecionados para o seu perfil durante o intervalo de tempo: ",
+  "booking_redirect_email_description": "Recebeu um redirecionamento de reserva de {{eventOwner}} para que os links do perfil deles sejam redirecionados para o seu durante o intervalo de tempo: \"{{dates}}\"",
+  "booking_redirect_updated_email_subject": "Notificação de edição de redirecionamento de reserva",
+  "booking_redirect_updated_email_title": "Notificação de Edição de Redirecionamento de Reserva",
+  "booking_redirect_updated_email_description": "O seu redirecionamento de reserva de {{eventOwner}} para o intervalo \"{{oldDates}}\" foi atualizado. O novo intervalo de tempo para o redirecionamento é: \"{{dates}}\"",
+  "booking_redirect_cancelled_email_subject": "Notificação de cancelamento de redirecionamento de reserva",
+  "booking_redirect_cancelled_email_title": "Notificação de Cancelamento de Redirecionamento de Reserva",
+  "booking_redirect_cancelled_email_description": "O seu redirecionamento de reserva de {{eventOwner}}, para o intervalo de tempo \"{{dates}}\" foi cancelado.",
   "success_accept_booking_redirect": "Aceitou este pedido de redirecionamento de reservas.",
   "success_reject_booking_redirect": "Rejeitou este pedido de redirecionamento de reservas.",
   "copy_link_booking_redirect_request": "Copiar ligação para partilhar o pedido",
@@ -2359,6 +2365,7 @@
   "redirect_team_disabled": "Redirecionar o seu perfil para outro membro da equipa (é necessário um plano Team)",
   "out_of_office_unavailable_list": "Lista de indisponibilidades de fora do escritório",
   "success_deleted_entry_out_of_office": "Entrada eliminada com sucesso",
+  "success_edited_entry_out_of_office": "Entrada editada com sucesso",
   "temporarily_out_of_office": "Temporariamente fora do escritório?",
   "add_a_redirect": "Adicionar um redirecionamento",
   "create_entry": "Criar entrada",
@@ -2482,6 +2489,7 @@
   "ooo_create_entry_modal": "Ir para fora do escritório",
   "ooo_select_reason": "Selecionar motivo",
   "create_an_out_of_office": "Ir para fora do escritório",
+  "edit_an_out_of_office": "Editar Entrada de Fora do Escritório",
   "submit_feedback": "Enviar feedback",
   "host_no_show": "O seu anfitrião não compareceu",
   "no_show_description": "Pode remarcar outra reunião",
