--- a/apps/web/public/static/locales/zh-CN/common.json
+++ b/apps/web/public/static/locales/zh-CN/common.json
@@ -2348,7 +2348,13 @@
   "success_entry_created": "成功创建了一个新条目",
   "booking_redirect_email_subject": "预订重定向通知",
   "booking_redirect_email_title": "预订重定向通知",
-  "booking_redirect_email_description": "您已经收到来自 {{toName}} 的预订重定向，因此在时间间隔内他们的个人资料链接将被重定向到您的：",
+  "booking_redirect_email_description": "您已收到来自{{eventOwner}}的预订重定向，因此他们的个人资料链接将在时间段“{{dates}}”内重定向到您的链接。",
+  "booking_redirect_updated_email_subject": "预订重定向编辑通知",
+  "booking_redirect_updated_email_title": "预订重定向编辑通知",
+  "booking_redirect_updated_email_description": "您从{{eventOwner}}收到的时间段为“{{oldDates}}”的预订重定向已更新。新的重定向时间段为：“{{dates}}”",
+  "booking_redirect_cancelled_email_subject": "预订重定向取消通知",
+  "booking_redirect_cancelled_email_title": "预订重定向取消通知",
+  "booking_redirect_cancelled_email_description": "您从{{eventOwner}}收到的时间段为“{{dates}}”的预订重定向已取消。",
   "success_accept_booking_redirect": "您已接受此预订重定向请求。",
   "success_reject_booking_redirect": "您已拒绝此预订重定向请求。",
   "copy_link_booking_redirect_request": "复制链接以分享请求",
@@ -2359,6 +2365,7 @@
   "redirect_team_disabled": "将您的个人资料重定向到其他团队成员（需要团队计划）",
   "out_of_office_unavailable_list": "外出不可用列表",
   "success_deleted_entry_out_of_office": "已成功删除条目",
+  "success_edited_entry_out_of_office": "成功编辑了外出条目",
   "temporarily_out_of_office": "暂时外出？",
   "add_a_redirect": "添加重定向",
   "create_entry": "创建条目",
@@ -2482,6 +2489,7 @@
   "ooo_create_entry_modal": "外出办公",
   "ooo_select_reason": "选择原因",
   "create_an_out_of_office": "外出办公",
+  "edit_an_out_of_office": "编辑外出条目",
   "submit_feedback": "提交反馈",
   "host_no_show": "您的主持人没有出现",
   "no_show_description": "您可以与他们重新安排另一次会议",
