--- a/apps/web/public/static/locales/es/common.json
+++ b/apps/web/public/static/locales/es/common.json
@@ -2348,7 +2348,13 @@
   "success_entry_created": "Entrada creada con éxito",
   "booking_redirect_email_subject": "Notificación de redirección de reserva",
   "booking_redirect_email_title": "Notificación de Redirección de Reserva",
-  "booking_redirect_email_description": "Has recibido una redirección de reserva de {{toName}}, por lo que los enlaces de su perfil se redirigirán al tuyo durante el intervalo de tiempo: ",
+  "booking_redirect_email_description": "Has recibido una redirección de reserva de {{eventOwner}} para que sus enlaces de perfil se redirijan al tuyo durante el intervalo de tiempo: \"{{dates}}\"",
+  "booking_redirect_updated_email_subject": "Notificación de edición de redirección de reserva",
+  "booking_redirect_updated_email_title": "Notificación de Edición de Redirección de Reserva",
+  "booking_redirect_updated_email_description": "La redirección de tu reserva de {{eventOwner}} para el intervalo \"{{oldDates}}\" ha sido actualizada. El nuevo intervalo de tiempo para la redirección es: \"{{dates}}\"",
+  "booking_redirect_cancelled_email_subject": "Notificación de cancelación de redirección de reserva",
+  "booking_redirect_cancelled_email_title": "Notificación de Cancelación de Redirección de Reserva",
+  "booking_redirect_cancelled_email_description": "La redirección de tu reserva de {{eventOwner}}, para el intervalo de tiempo \"{{dates}}\" ha sido cancelada.",
   "success_accept_booking_redirect": "Has aceptado esta solicitud de redirección de reserva.",
   "success_reject_booking_redirect": "Has rechazado esta solicitud de redirección de reserva.",
   "copy_link_booking_redirect_request": "Copiar enlace para compartir solicitud",
@@ -2359,6 +2365,7 @@
   "redirect_team_disabled": "Proporciona un enlace a un miembro del equipo cuando estés fuera de la oficina (Se requiere plan de equipo)",
   "out_of_office_unavailable_list": "Lista de indisponibilidad fuera de la oficina",
   "success_deleted_entry_out_of_office": "Entrada eliminada con éxito",
+  "success_edited_entry_out_of_office": "Entrada editada con éxito",
   "temporarily_out_of_office": "¿Fuera de la oficina temporalmente?",
   "add_a_redirect": "Agregar una redirección",
   "create_entry": "Crear entrada",
@@ -2482,6 +2489,7 @@
   "ooo_create_entry_modal": "Salir de la oficina",
   "ooo_select_reason": "Seleccionar motivo",
   "create_an_out_of_office": "Salir de la oficina",
+  "edit_an_out_of_office": "Editar Entrada de Fuera de la Oficina",
   "submit_feedback": "Enviar comentarios",
   "host_no_show": "Tu anfitrión no se presentó",
   "no_show_description": "Puedes reprogramar otra reunión con ellos",
