--- a/apps/web/public/static/locales/it/common.json
+++ b/apps/web/public/static/locales/it/common.json
@@ -2348,7 +2348,13 @@
   "success_entry_created": "Nuova voce creata correttamente",
   "booking_redirect_email_subject": "Notifica di reindirizzamento prenotazione",
   "booking_redirect_email_title": "Notifica di reindirizzamento prenotazione",
-  "booking_redirect_email_description": "Hai ricevuto un reindirizzamento delle prenotazioni da {{toName}}. I link del suo profilo rimanderanno ai tuoi, nel periodo: ",
+  "booking_redirect_email_description": "Hai ricevuto un reindirizzamento della prenotazione da {{eventOwner}} quindi i loro link del profilo saranno reindirizzati al tuo per l'intervallo di tempo: \"{{dates}}\"",
+  "booking_redirect_updated_email_subject": "Notifica di modifica del reindirizzamento della prenotazione",
+  "booking_redirect_updated_email_title": "Notifica di Modifica del Reindirizzamento della Prenotazione",
+  "booking_redirect_updated_email_description": "Il tuo reindirizzamento della prenotazione da {{eventOwner}} per l'intervallo \"{{oldDates}}\" è stato aggiornato. Il nuovo intervallo di tempo per il reindirizzamento è: \"{{dates}}\"",
+  "booking_redirect_cancelled_email_subject": "Notifica di cancellazione del reindirizzamento della prenotazione",
+  "booking_redirect_cancelled_email_title": "Notifica di Cancellazione del Reindirizzamento della Prenotazione",
+  "booking_redirect_cancelled_email_description": "Il tuo reindirizzamento della prenotazione da {{eventOwner}}, per l'intervallo di tempo \"{{dates}}\" è stato cancellato.",
   "success_accept_booking_redirect": "Hai accettato questa richiesta di reindirizzamento delle prenotazioni.",
   "success_reject_booking_redirect": "Hai rifiutato questa richiesta di reindirizzamento delle prenotazioni.",
   "copy_link_booking_redirect_request": "Copia link per condividere la richiesta",
@@ -2359,6 +2365,7 @@
   "redirect_team_disabled": "Reindirizza il tuo profilo a un altro membro del team (è necessario il piano Team)",
   "out_of_office_unavailable_list": "Elenco di indisponibilità per assenza",
   "success_deleted_entry_out_of_office": "Voce eliminata",
+  "success_edited_entry_out_of_office": "Voce modificata con successo",
   "temporarily_out_of_office": "Temporaneamente assente?",
   "add_a_redirect": "Aggiungi un reindirizzamento",
   "create_entry": "Crea una voce",
@@ -2482,6 +2489,7 @@
   "ooo_create_entry_modal": "Inizia assenza",
   "ooo_select_reason": "Seleziona motivo",
   "create_an_out_of_office": "Inizia assenza",
+  "edit_an_out_of_office": "Modifica Voce Fuori Ufficio",
   "submit_feedback": "Invia feedback",
   "host_no_show": "L'organizzatore non si è presentato",
   "no_show_description": "Puoi programmare un nuovo incontro",
