--- a/apps/web/public/static/locales/pt-BR/common.json
+++ b/apps/web/public/static/locales/pt-BR/common.json
@@ -2348,7 +2348,13 @@
   "success_entry_created": "Entrada criada com sucesso",
   "booking_redirect_email_subject": "Notificação de redirecionamento de reserva",
   "booking_redirect_email_title": "Notificação de redirecionamento de reserva",
-  "booking_redirect_email_description": "Você recebeu um redirecionamento de reserva de {{toName}} para que os links do perfil deles sejam redirecionados para o seu durante o intervalo de tempo: ",
+  "booking_redirect_email_description": "Você recebeu um redirecionamento de agendamento de {{eventOwner}}, então os links do perfil deles serão redirecionados para o seu durante o intervalo de tempo: \"{{dates}}\"",
+  "booking_redirect_updated_email_subject": "Notificação de edição de redirecionamento de agendamento",
+  "booking_redirect_updated_email_title": "Notificação de Edição de Redirecionamento de Agendamento",
+  "booking_redirect_updated_email_description": "Seu redirecionamento de agendamento de {{eventOwner}} para o intervalo \"{{oldDates}}\" foi atualizado. O novo intervalo de tempo para o redirecionamento é: \"{{dates}}\"",
+  "booking_redirect_cancelled_email_subject": "Notificação de cancelamento de redirecionamento de agendamento",
+  "booking_redirect_cancelled_email_title": "Notificação de Cancelamento de Redirecionamento de Agendamento",
+  "booking_redirect_cancelled_email_description": "Seu redirecionamento de agendamento de {{eventOwner}}, para o intervalo de tempo \"{{dates}}\" foi cancelado.",
   "success_accept_booking_redirect": "Você aceitou esta solicitação de redirecionamento de reserva.",
   "success_reject_booking_redirect": "Você rejeitou esta solicitação de redirecionamento de reserva.",
   "copy_link_booking_redirect_request": "Copiar link para solicitação de compartilhamento",
@@ -2359,6 +2365,7 @@
   "redirect_team_disabled": "Redirecione seu perfil para outro membro da equipe (é necessário plano de equipe)",
   "out_of_office_unavailable_list": "Lista de indisponibilidade",
   "success_deleted_entry_out_of_office": "Entrada excluída com sucesso",
+  "success_edited_entry_out_of_office": "Entrada editada com sucesso",
   "temporarily_out_of_office": "Temporariamente ausente?",
   "add_a_redirect": "Adicionar um redirecionamento",
   "create_entry": "Criar entrada",
@@ -2482,6 +2489,7 @@
   "ooo_create_entry_modal": "Criar política Ausente",
   "ooo_select_reason": "Selecione motivo",
   "create_an_out_of_office": "Criar política Ausente",
+  "edit_an_out_of_office": "Editar Entrada de Ausência",
   "submit_feedback": "Enviar Feedback",
   "host_no_show": "A(O) anfitriã(o) não apareceu",
   "no_show_description": "Você pode agendar outra reunião com ele(a)",
