--- a/apps/web/public/static/locales/ru/common.json
+++ b/apps/web/public/static/locales/ru/common.json
@@ -2348,7 +2348,13 @@
   "success_entry_created": "Новая запись успешно создана",
   "booking_redirect_email_subject": "Уведомление о перенаправлении бронирования",
   "booking_redirect_email_title": "Уведомление о перенаправлении бронирования",
-  "booking_redirect_email_description": "Вы получили перенаправление бронирования от {{toName}}, поэтому их ссылки на профиль будут перенаправлены на ваш в течение следующего временного интервала: ",
+  "booking_redirect_email_description": "Вы получили перенаправление бронирования от {{eventOwner}}, поэтому их профильные ссылки будут перенаправлены на ваш в течение временного интервала: \"{{dates}}\"",
+  "booking_redirect_updated_email_subject": "Уведомление об изменении перенаправления бронирования",
+  "booking_redirect_updated_email_title": "Уведомление об изменении перенаправления бронирования",
+  "booking_redirect_updated_email_description": "Ваше перенаправление бронирования от {{eventOwner}} для интервала \"{{oldDates}}\" было обновлено. Новый временной интервал для перенаправления: \"{{dates}}\"",
+  "booking_redirect_cancelled_email_subject": "Уведомление об отмене перенаправления бронирования",
+  "booking_redirect_cancelled_email_title": "Уведомление об отмене перенаправления бронирования",
+  "booking_redirect_cancelled_email_description": "Ваше перенаправление бронирования от {{eventOwner}} для временного интервала \"{{dates}}\" было отменено.",
   "success_accept_booking_redirect": "Вы приняли запрос на перенаправление бронирования.",
   "success_reject_booking_redirect": "Вы отклонили запрос на перенаправление бронирования.",
   "copy_link_booking_redirect_request": "Скопировать ссылку для запроса",
@@ -2359,6 +2365,7 @@
   "redirect_team_disabled": "Предоставьте ссылку на члена команды, когда вы отсутствуете (требуется командный план)",
   "out_of_office_unavailable_list": "Список недоступности",
   "success_deleted_entry_out_of_office": "Запись успешно удалена",
+  "success_edited_entry_out_of_office": "Запись успешно отредактирована",
   "temporarily_out_of_office": "Временно отсутствуете?",
   "add_a_redirect": "Добавить перенаправление",
   "create_entry": "Создать запись",
@@ -2482,6 +2489,7 @@
   "ooo_create_entry_modal": "Выйти из офиса",
   "ooo_select_reason": "Выберите причину",
   "create_an_out_of_office": "Выйти из офиса",
+  "edit_an_out_of_office": "Редактировать запись о нерабочем времени",
   "submit_feedback": "Отправить отзыв",
   "host_no_show": "Ваш хост не появился",
   "no_show_description": "Вы можете переназначить встречу с ними",
